# PaceKeeper

./: .cursorignore  .gitignore  CLAUDE.md  Makefile  PaceKeeper.spec  README.md  UI_IMPROVEMENT_GUIDE.md  build.spec  chmod_scripts.sh  config.json  create_dummy_data.py  create_spec.py  designer.sh  entry.py  execute_commands.sh  main-mac.spec  main-win.spec  main.spec  makefile  merge_files.py  migration.py  pyproject.toml  relation.md  run_prototype.sh  setup_summary.md  test_korean_tags.py  validate_prototype.sh  widget_validation.py
.cursor/: project_plan.md
.cursor/rules/: refac-qt.mdc
.legacy/: main-mac.spec  main.spec
.legacy/repository/: category_repository.py  db_manager.py  log_repository.py  tag_repository.py
.legacy/service/: category_service.py  log_service.py  tag_service.py
app/: __init__.py  main_responsive.py
app/config/: app_config.py  db_manager.py
app/controllers/: __init__.py  main_controller.py  timer_controller.py
app/domain/: __init__.py
app/domain/category/: __init__.py  category_entity.py  category_repository.py  category_service.py
app/domain/log/: __init__.py  log_entity.py  log_repository.py  log_service.py
app/domain/tag/: __init__.py  tag_entity.py  tag_repository.py  tag_service.py
app/utils/: constants.py
app/views/: __init__.py  log_widget.py  main_window.py  main_window_methods.py  tag_widget.py  text_input_widget.py  timer_widget_responsive.py
app/views/dialogs/: break_dialog.py  category_dialog.py  log_dialog.py  settings_dialog.py  tag_dialog.py
app/views/main_window/: __init__.py  actions.py  event_handlers.py  main_window.py  main_window_methods.py  ui_setup.py  ui_updates.py
app/views/styles/: __init__.py  advanced_theme_manager.py  responsive_style_manager.py  theme_manager.py  update_dialogs.py  widget_helpers.py
app/views/styles/themes/: advanced.qss  dark.qss  default.qss
assets/: config.json
assets/icons/: PaceKeeper.icns
breaktrack/: app.py  const.py  main.py  utils.py
breaktrack/controllers/: config_controller.py  main_controller.py  sound_manager.py
breaktrack/models/: data_model.py  setting_model.py
breaktrack/views/: break_dialog.py  main_frame.py  settings_dialog.py  track_dialog.py
data/: config.json
docs/: project_features.md  project_structure.md  refactoring_suggestions.md
docs/code_memory/: docs.md
output/: collections-summary-1.py
pacekeeper/: config.json  const.py  main.py  utils.py
pacekeeper/assets/styles/: modern_light.qss
pacekeeper/consts/: colors.py  labels.py  lang_en.json  lang_ko.json  settings.py  styles.py
pacekeeper/container/: CLAUDE.md  __init__.py  di_container.py  service_registration.py
pacekeeper/controllers/: CLAUDE.md  category_controls.py  config_controller.py  main_controller.py  sound_manager.py  timer_controller.py  timer_thread.py
pacekeeper/database/: CLAUDE.md  __init__.py  session_manager.py  unit_of_work.py
pacekeeper/interfaces/: CLAUDE.md  __init__.py
pacekeeper/interfaces/repositories/: __init__.py  i_category_repository.py  i_log_repository.py  i_tag_repository.py
pacekeeper/interfaces/services/: __init__.py  i_category_service.py  i_log_service.py  i_tag_service.py
pacekeeper/models/: data_model.py  setting_model.py
pacekeeper/repository/: CLAUDE.md  category_repository.py  db_config.py  entities.py  log_repository.py  tag_repository.py
pacekeeper/services/: CLAUDE.md  app_state_manager.py  category_service.py  log_service.py  setting_model.py  settings_manager.py  tag_service.py
pacekeeper/utils/: app_paths.py  desktop_logger.py  functions.py  logger.py  migration.py  resource_path.py  theme_manager.py
pacekeeper/views/: CLAUDE.md  break_dialog.py  category_dialog.py  controls.py  log_dialog.py  main_frame.py  main_window.py  settings_dialog.py  track_dialog.py
