[tool.poetry]
name = "breaktrack"
version = "0.1.0"
description = ""
authors = ["isinthesky <hijde@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wxpython = "^4.2.2"
pygame = "^2.6.1"
icecream = "^2.1.3"

[tool.poetry.scripts]
app = "breaktrack.main:main"
ruff = "ruff check ."
start = "poetry run app"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "W", "C90"]
ignore = ["E203", "E266", "E501", "F403", "F401"]