[tool.poetry]
name = "pacekeeper"
version = "0.1.0"
description = "Keep your perfect work-life balance"
authors = ["isinthesky <hijde@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyqt5 = "^5.15.9"
pygame = "^2.6.1"
icecream = "^2.1.3"
pyinstaller = "^6.11.1"
sqlalchemy = "^2.0.38"

[tool.poetry.scripts]
start = "pacekeeper.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
vulture = "^2.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E203", "E266", "E501", "F403", "F401"]